force-app/main/default/objects/Headquarter__c/Headquarter__c.object-meta.xml
<CustomObject>
    <description>This will hold information for all places supes might do business.</description>
    <label>Headquarter</label>
    <nameField>
        <label>Headquarter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Headquarters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>