force-app/main/default/objects/Headquarter__c/fields/Is_Secret__c.field-meta.xml
<CustomField>
    <fullName>Is_Secret__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether a headquarter location is secret or not.</description>
    <label>Is Secret</label>
    <type>Checkbox</type>
</CustomField>