force-app/main/default/objects/Headquarter__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Where the headquarters are located</description>
    <inlineHelpText>This contains only the street name of the headquarter location.</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>